tests/reference/asr-continue_compilation_ff_1-dbe0a43.stderr
syntax error: Newline is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:30:14
   |
30 |       I == 10
   |              ^ 

syntax error: Token '.5' (of type 'real') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:31:14
   |
31 |       J = 20..5
   |              ^^ 

syntax error: Token 'i' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:32:32
   |
32 |       PRINT *, "Value of I is" I
   |                                ^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
  --> tests/errors/continue_compilation_ff_1.f:33:7
   |
33 |       CHARACTER*10 STR = 'Hello  '
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Token 'format' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:34:18
   |
34 |       WRITE(*,10 FORMAT(A))
   |                  ^^^^^^ 

syntax error: Token '*' is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:35:16
   |
35 |       A = B +  * C
   |                ^ 

syntax error: Token '.5' (of type 'real') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:38:20
   |
38 |       REAL X Y Z 10.5
   |                    ^^ 

syntax error: Newline is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:39:27
   |
39 |       COMPLEX C = (1.0,2.0
   |                           ^ 

syntax error: Token '=' is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:41:11
   |
41 |       I === 10
   |           ^ 

syntax error: Token 'e' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:42:14
   |
42 |       J = .20E
   |              ^ 

syntax error: Token '.45' (of type 'real') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:43:22
   |
43 |       REAL*8 A = 1.23.45
   |                      ^^^ 

semantic error: Variable 'bc' is not declared
  --> tests/errors/continue_compilation_ff_1.f:45:25
   |
45 |       COMMON /BLOCK/ A, B C
   |                         ^^^ 'bc' is undeclared

semantic error: Variable 'integerklm' is not declared
  --> tests/errors/continue_compilation_ff_1.f:36:7
   |
36 |       INTEGER K L M = 5
   |       ^^^^^^^^^^^^^ 'integerklm' is undeclared

semantic error: Variable 'n5' is not declared
  --> tests/errors/continue_compilation_ff_1.f:37:15
   |
37 |       READ *, N 5
   |               ^^^ 'n5' is undeclared

semantic error: Function 'format' not found (not user defined nor intrinsic)
  --> tests/errors/continue_compilation_ff_1.f:40:19
   |
40 |       WRITE(*,10) FORMAT(A, I5)
   |                   ^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_ff_1.f:47:13
   |
47 |       val = THIS_IMAGE()
   |             ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_ff_1.f:48:7
   |
48 |       CALL CO_SUM(val, RESULT_IMAGE=1)
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_ff_1.f:49:11
   |
49 |       IF (THIS_IMAGE() == 1) THEN
   |           ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_ff_1.f:53:7
   |
53 |       CALL EVENT_QUERY(1, 1, 1)
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
  --> tests/errors/continue_compilation_ff_1.f:60:33
   |
60 |       size_a_2 = SIZE(a_3, KIND=kindvar, DIM=1)
   |                                 ^^^^^^^ 

semantic error: Different `character` lengths 1 and 4 in array constructor
  --> tests/errors/continue_compilation_ff_1.f:62:27
   |
62 |       PRINT *, ["a", "b", "ball", "cat"]
   |                           ^^^^^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
  --> tests/errors/continue_compilation_ff_1.f:63:20
   |
63 |       PRINT *, [1, 2.]
   |                    ^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
  --> tests/errors/continue_compilation_ff_1.f:64:20
   |
64 |       PRINT *, [1, [1., 2.]]
   |                    ^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
  --> tests/errors/continue_compilation_ff_1.f:65:16
   |
65 |       PRINT *, DFLOAT(y_3)
   |                ^^^^^^^^^^^ 

semantic error: Invalid argument type for `dim` or `mask`
  --> tests/errors/continue_compilation_ff_1.f:67:31
   |
67 |       PRINT *, SUM([1, 2, 3], 1.1)
   |                               ^^^ 

semantic error: Too many arguments to call `dint`
  --> tests/errors/continue_compilation_ff_1.f:68:16
   |
68 |       PRINT *, DINT(1.0_8, 8)
   |                ^^^^^^^^^^^^^^ 

semantic error: Argument 1 of dlgama must be of double precision real type
  --> tests/errors/continue_compilation_ff_1.f:69:16
   |
69 |       PRINT *, DLGAMA(2.7)
   |                ^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
  --> tests/errors/continue_compilation_ff_1.f:70:16
   |
70 |       PRINT *, DNINT(1.0_8, 8)
   |                ^^^^^^^^^^^^^^^ 

semantic error: Arguments to dprod must be real(4)
  --> tests/errors/continue_compilation_ff_1.f:71:16
   |
71 |       PRINT *, DPROD(4.23_8, 4.3_8)
   |                ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i_2` is not allowed
  --> tests/errors/continue_compilation_ff_1.f:75:11
   |
75 |           i_2 = j_1 + 1
   |           ^^^ 

semantic error: Step expression (Increment) in DO loop cannot be zero
  --> tests/errors/continue_compilation_ff_1.f:81:22
   |
81 |       DO i_2 = 1, 5, 0
   |                      ^ 

semantic error: Unexpected args, Dreal expects (complex64) as arguments
  --> tests/errors/continue_compilation_ff_1.f:85:16
   |
85 |       PRINT *, DREAL(a_4)
   |                ^^^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
  --> tests/errors/continue_compilation_ff_1.f:87:16
   |
87 |       PRINT *, FLOAT(y_4)
   |                ^^^^^^^^^^ 
